--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,17 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+*.DS_Store
+img/._4052.png
+img/._4096.png
+img/._4198.png
+img/._4221.png
+img/._4239.png
+img/._4251.png
+img/._Red-signin-Small-base-44dp.png
+img/._cvme.png
+img/._home.png
+img/._twitter-bird-white-on-blue.png
+img/._uebermichPhoto.png
+index_bkp.html
+BingSiteAuth.xml
