picture folder adjustement and ignore netbeans-project configuration
picture folder adjustement and ignore netbeans-project configuration

--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,6 @@ img/._twitter-bird-white-on-blue.png
 img/._uebermichPhoto.png
 index_bkp.html
 BingSiteAuth.xml
+/nbproject/private/
+nbproject/project.properties
+nbproject/project.xml
