changed default cache time to 1 month
changed default cache time to 1 month

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_expires.c>
   ExpiresActive On
-  ExpiresDefault "access plus 300 seconds"
+  ExpiresDefault "access plus 1 month"
   ExpiresByType text/css "access plus 1 month"
   ExpiresByType text/javascript "access plus 1 month"
   ExpiresByType application/javascript "access plus 1 month"
