Duplikate des CV mit unterschiedlichem Namen ignorieren
Duplikate des CV mit unterschiedlichem Namen ignorieren

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,6 @@ BingSiteAuth.xml
 /nbproject/private/
 nbproject/project.properties
 nbproject/project.xml
+/cv_bkp.pdf
+/cvphilippjauss.pdf
+/CV_PhilippJauss.pdf
