Add gulp and optimize the whole thing

--- a/.gitignore
+++ b/.gitignore
@@ -230,6 +230,5 @@ BingSiteAuth.xml
 /nbproject/private/
 nbproject/project.properties
 nbproject/project.xml
-/cv_bkp.pdf
-/cvphilippjauss.pdf
-/CV_PhilippJauss.pdf
+
+node_modules
