--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-inline-source": "^3.1.0",
     "gulp-sass": "^4.0.1",
+    "gulp-webp": "^3.0.0",
     "imagemin-gifsicle": "^5.1.0",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-optipng": "^5.2.1",
-    "imagemin-pngquant": "^5.0.0"
+    "imagemin-pngquant": "^5.0.0",
+    "imagemin-webp": "^4.1.0"
   }
 }
