--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,36 @@
 <IfModule mod_expires.c>
   ExpiresActive On
-  ExpiresDefault "access plus 1 month"
-  ExpiresByType text/css "access plus 1 month"
-  ExpiresByType text/javascript "access plus 1 month"
-  ExpiresByType application/javascript "access plus 1 month"
-  ExpiresByType image/png "access plus 1 month"
+  ExpiresByType text/css "access plus 1 minute"
+  ExpiresByType text/html "access plus 1 minute"
+  ExpiresByType text/javascript "access plus 1 minute"
+  ExpiresByType application/javascript "access plus 1 minute"
+  ExpiresByType text/x-javascript "access plus 1 minute"
+  ExpiresByType image/png "access plus 1 minute"
+  ExpiresByType image/jpg "access plus 1 minute"
+  ExpiresByType image/gif "access plus 1 minute"
+  ExpiresByType image/ico "access plus 1 month"
+  ExpiresDefault "access plus 1 minute"
+</IfModule>
+<IfModule mod_rewrite.c>
+  # enable the rewrite engine
+  RewriteEngine On
+  # Set your root directory
+  RewriteBase /
+
+  # remove the .html extension
+  RewriteCond %{THE_REQUEST} ^GET\ (.*)\.html\ HTTP
+  RewriteRule (.*)\.html$ $1 [R=301]
+
+  # remove index and reference the directory
+  RewriteRule (.*)/index$ $1/ [R=301]
+
+  # remove trailing slash if not a directory
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_URI} /$
+  RewriteRule (.*)/ $1 [R=301]
+
+  # forward request to html file, **but don't redirect (bot friendly)**
+  RewriteCond %{REQUEST_FILENAME}.html -f
+  RewriteCond %{REQUEST_URI} !/$
+  RewriteRule (.*) $1\.html [L]
 </IfModule>
